Updating the way RollupSObjectUpdater defers updating all parent records if a rollup is in the midst of timing out. This means that a rollup the starts to time out will still attempt to update the parents it has already processed prior to finishing its own deferral. In some edge case with a batch full recalc, the combination of a particular batch deferring itself as a queueable in conjunction with the parents already processed having mistakenly also being deferred to a queueable was causing the error System.LimitException: Too many queueable jobs added to the queue: 2

--- a/rollup/core/classes/RollupPlugin.cls
+++ b/rollup/core/classes/RollupPlugin.cls
@@ -1,19 +1,22 @@
 public without sharing class RollupPlugin {
   @TestVisible
-  private static List<RollupPlugin__mdt> pluginMocks;
+  private static List<RollupPlugin__mdt> pluginMocks = new List<RollupPlugin__mdt>();
   @TestVisible
   private static RollupPluginParameter__mdt parameterMock;
 
   public RollupPlugin__mdt getInstance(String developerNameOrId) {
-    return pluginMocks != null && pluginMocks.isEmpty() == false ? pluginMocks.remove(0) : RollupPlugin__mdt.getInstance(developerNameOrId);
+    for (RollupPlugin__mdt plugin : pluginMocks) {
+      if (plugin.DeveloperName == developerNameOrId) {
+        return plugin;
+      }
+    }
+    return RollupPlugin__mdt.getInstance(developerNameOrId);
   }
 
   public List<RollupPlugin__mdt> getInstances() {
     List<RollupPlugin__mdt> plugins = new List<RollupPlugin__mdt>();
     plugins.addAll(RollupPlugin__mdt.getAll().values());
-    if (pluginMocks != null) {
-      plugins.addAll(pluginMocks);
-    }
+    plugins.addAll(pluginMocks);
     return plugins;
   }
 
