Fixing issue with broken test

--- a/extra-tests/classes/RollupSObjectUpdaterTests.cls
+++ b/extra-tests/classes/RollupSObjectUpdaterTests.cls
@@ -76,13 +76,19 @@ public class RollupSObjectUpdaterTests {
   }
 
   @IsTest
-  static void doesNotUpdateRecordsWhichOnlyContainId() {
+  static void onlyUpdatesRecordsWithRollupChanges() {
     Account acc = new Account(Name = 'Should Not Be Updated');
     insert acc;
     acc = [SELECT Id, LastModifiedDate FROM Account];
     waitSeconds(1);
 
-    new RollupSObjectUpdater().doUpdate(new List<SObject>{ new Account(Id = acc.Id) });
+    List<String> fieldNames = new List<String>{ 'Id' };
+    if (RollupCurrencyInfo.isMultiCurrency()) {
+      fieldNames.add(RollupCurrencyInfo.CURRENCY_ISO_CODE_FIELD_NAME);
+    }
+
+    Id accId = acc.Id;
+    new RollupSObjectUpdater().doUpdate(Database.query('SELECT ' + String.join(fieldNames, ',') + ' FROM Account WHERE Id = :accId'));
 
     Account updatedAccount = [SELECT Id, LastModifiedDate FROM Account];
     System.assertEquals(acc, updatedAccount, 'Last modified date should not have updated if only Id was passed');
