--- a/rollup/core/classes/RollupFullBatchRecalculator.cls
+++ b/rollup/core/classes/RollupFullBatchRecalculator.cls
@@ -17,7 +17,7 @@ public without sharing virtual class RollupFullBatchRecalculator extends RollupF
   }
 
   public virtual override void execute(Database.BatchableContext bc, List<SObject> calcItems) {
-    this.logger.log('starting full batch recalc run:', this, LoggingLevel.INFO);
+    this.logger.log('starting full batch chunk:', this, LoggingLevel.INFO);
     /**
      * this batch class is a glorified "for loop" for the calc items, dispatching
      * them to the overall Rollup framework while breaking us out of the query limits
@@ -26,6 +26,7 @@ public without sharing virtual class RollupFullBatchRecalculator extends RollupF
      * parent class
      */
     this.process(this.getDelegatedFullRecalcRollups(calcItems));
+    this.logger.log('batch chunk end', LoggingLevel.INFO);
   }
 
   public override Boolean isBatch() {
